Fixing overflow-two column bug, more space

--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -6,7 +6,7 @@
 }
 
 .page-content {
-  padding-bottom: 8rem;
+  padding-bottom: 8.5rem;
 
   @include desktop {
     padding-top: $desktop-header-height;
